--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.2.6",
+    "vite-plugin-pwa": "^1.0.0",
     "vue-tsc": "^2.2.2"
   },
   "resolutions": {
